@@ -1,13 +1,22 @@
-.TH DFU\-PROGRAMMER 1 "January 20, 2013" "DFU\-PROGRAMMER" ""
+.TH DFU\-PROGRAMMER 1 "January 24, 2013" "DFU\-PROGRAMMER" ""
 .SH NAME
 dfu\-programmer \- USB firmware upgrading for Atmel microcontrollers
 .nh
 .SH SYNOPSIS
 .B dfu\-programmer
 target command [options] [parameters]
+.br
+.B dfu\-programmer
+--help
+.br
+.B dfu\-programmer
+--targets
+.br
+.B dfu\-programmer
+--version
 .SH DESCRIPTION
 .B dfu\-programmer
-is a Linux command line Device Firmware Upgrade (DFU) based programmer
+is a multi-platform command line Device Firmware Upgrade (DFU) based programmer
 for the flash memory on Atmel AVR, AVR32, XMEGA and 8051 based microcontrollers
 which ship with a USB boot loader. 
 It supports In System Programming (ISP) for developers and potentially
@@ -113,7 +122,7 @@ file format convention for a memory image.
 .HP
 .B setsecure
 .br
-Sets the security on the AVR32 chips.  This prevents the content being
+Sets the security bit on AVR32 chips.  This prevents the content being
 read back from the chip, except in the same session in which it was
 programmed.  When the security fuse is set, almost nothing will work
 without first executing the erase command.  The only way to clear the
@@ -140,10 +149,6 @@ Resets microcontroller using watchdog timer
 .br
 Starts the application firmware by having the microcontroller
 jump to address zero.
-.HP
-.B version
-.br
-This prints a string identifying the version of this utility.
 .SS Global Options
 \-\-quiet \- minimizes the output
 
@@ -198,6 +203,9 @@ command may fail with a less than helpful error message.
 To remove
 .B any
 write or read protection from any chips, a full chip erasure is required.
+For AVR32 chips an erase operation over USB will remove protection until the
+device is rebooted. To remove the protection more permanently requires a
+JTAG erase (which will also erase the bootloader).
 .PP
 You may need to be a member of the
 .B uucp
@@ -207,8 +215,14 @@ Weston Schmidt <weston_schmidt@alumni.purdue.edu>
 .SH SEE ALSO
 .UR dfu-programmer.sourceforge.net
 http://dfu-programmer.sourceforge.net
+.UR USB DFU Bootloader Datasheet (8052, AVR)
+http://www.atmel.com/Images/doc7618.pdf
+.UR AVR32 UC3 USB DFU Bootloader Protocol
+http://www.atmel.com/Images/doc32131.pdf
+.UR FLIP USB DFU Protocol
+http://www.atmel.com/Images/doc8457.pdf
 .UR AVR32 UC3 USB DFU Bootloader
-http://atmel.com/dyn/resources/prod_documents/doc7745.pdf
+http://www.atmel.com/Images/doc7745.pdf
 .SH COPYRIGHT
 Copyright (C) 2005-2013 Weston Schmidt
 
